--- a/Whist/bin/smart.properties
+++ b/Whist/bin/smart.properties
@@ -6,3 +6,11 @@ Smart_NPCs = 1
 Legal_NPCs = 2
 # numbers of random NPCs
 Random_NPCs = 0
+# position 0
+Position0 = Interactive_Players
+# position 1
+Position1 = Smart_NPCs
+# position 2
+Position2 = Legal_NPCs
+# position 3
+Position3 = Legal_NPCs
