--- a/Whist/bin/legal.properties
+++ b/Whist/bin/legal.properties
@@ -6,3 +6,11 @@ Interactive_Players = 0
 Smart_NPCs = 0
 # numbers of random NPCs
 Random_NPCs = 0
+# position 0
+Position0 = Legal_NPCs
+# position 1
+Position1 = Legal_NPCs
+# position 2
+Position2 = Legal_NPCs
+# position 3
+Position3 = Legal_NPCs
