--- a/Whist/whist/original.properties
+++ b/Whist/whist/original.properties
@@ -6,3 +6,11 @@ Random_NPCs = 3
 Legal_NPCs = 0
 # numbers of smart NPCs
 Smart_NPCs = 0
+# position 0
+Position0 = Interactive_Players
+# position 1
+Position1 = Random_NPCs
+# position 2
+Position2 = Random_NPCs
+# position 3
+Position3 = Random_NPCs
